[project]
name = "survivalpredict"
version = "0.0.1"
description = "Predicting survival for out-of-sample data, with a scikit-learn-like api."
readme = "README.md"
requires-python = ">=3.10"
authors = [
     {name = "Pouya Rezvanipour", email = "pouyar3@yahoo.com"},
]
dependencies = [
    "jax>=0.6.2",
    "numba>=0.63.1",
    "numpy>=2.2.6",
    "optax>=0.2.7",
    "pymc>=5.25.1",
    "pymc-extras>=0.2.7",
    "pytensor[jax,numba]>=2.31.7",
    "scikit-learn>=1.4.0",
    "scipy>=1.15.3",
]
