[project]
name = "survivalpredict"
version = "0.0.1"
description = "python survival analysis/survival curves, with a scikit-learn-like api."
readme = "README.md"
requires-python = ">=3.11"
authors = [
     {name = "Pouya Rezvanipour", email = "pouyar3@yahoo.com"},
]

dependencies = [
    "jax>=0.6.2",
    "numba>=0.63.1",
    "numpy>=2.2.6",
    "optax>=0.2.7",
    "pymc>=5.25.1",
    "pymc-extras>=0.2.7",
    "pytensor[jax,numba]>=2.31.7",
    "scikit-learn>=1.4.0",
    "scipy>=1.15.3",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    'Intended Audience :: Education',
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

license =  "Apache-2.0"

keywords = ["cox", "survival"]


[project.optional-dependencies]
test = [
    "pandas",
    "pytest",
    "polars"
]
docs = [
    "myst-nb>=1.4.0",
    "numpydoc>=1.10.0",
    "sphinx==8.2.3",
    "sphinx-collections>=0.3.1",
    "sphinx-design>=0.7.0",
    "sphinxcontrib-napoleon>=0.7",
    "furo>=2025.12.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/pr38/survivalpredict"
Documentation = "https://survivalpredict.readthedocs.io/"

